Fix client alignment on About, closes #87

--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -1,11 +1,11 @@
 .values {
   color: $white;
   -webkit-font-smoothing: antialiased;
-  & > div {
-    @include media-breakpoint-up(md) {
-      padding: 3rem 0rem;
-    }
-  }
+  // & > div {
+  //   @include media-breakpoint-up(md) {
+  //     padding: 3rem 0rem;
+  //   }
+  // }
   h1 {
     margin-bottom: 0;
   }
@@ -24,6 +24,10 @@
       border-bottom: none;
     }
   }
+
+  h2 span {
+    display: block;
+  }
 }
 
 .subnav {
@@ -32,7 +36,7 @@
   position: sticky;
 }
 
-.active h2 {
+.active h2 a span {
   @extend .underlineChange;
   transition: background-size .3s ease;
 }
@@ -69,6 +73,13 @@
     ul {
       display: block;
     }
+  }
+}
+
+#clients .list.show {
+  max-height: 1000px;
+  ul {
+    display: block;
   }
 }
 span.active svg {
@@ -136,4 +147,9 @@ a.active, span.active a {
 
 .about .subnav a.nav-link.active {
   background-size: 0% 0%;
+}
+
+.values {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
